# AI-Model-Fine-Tuning

./: CITATION.cff  README.md  README.pl.md  analysis.ipynb  pyproject.toml  requirements.txt
configs/: config.yaml
data/: processed.pkl
src/: __init__.py  data.py  features.py  models.py  predict.py  train.py
tests/: conftest.py  test_data.py  test_features.py  test_models.py
