[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gold-silver-gpr-forecast"
version = "0.1.0"
description = "Fine-tuned ML pipeline forecasting gold/silver returns from geopolitical risk."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Mmaladza" }]
keywords = ["machine-learning", "finance", "time-series", "xgboost", "pytorch", "optuna"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Repository = "https://github.com/Mmaladza/gold-silver-gpr-forecast"
Dataset   = "https://www.kaggle.com/datasets/shreyanshdangi/gold-silver-price-vs-geopolitical-risk-19852025"

[tool.setuptools]
packages = ["src"]

# ---------- Ruff ----------
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["data", "models", "reports", ".venv"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "SIM",      # simplify
    "NPY",      # numpy-specific
]
ignore = [
    "E501",  # długości pilnuje formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]                       # "bezsensowne" wyrażenia w testach są OK
"*.ipynb" = ["E402", "E702", "E703"]       # notebooki: importy w środku, ;-separatory

[tool.ruff.format]
quote-style = "double"

# ---------- Pytest ----------
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
